# pinocchioRep

./: .gitignore  CMakeLists.txt  README.md
IK/: CMakeLists.txt  pinoIK.cpp
collisionDetection/: CMakeLists.txt  collisionDetection.cpp
math/: BSplineInterpolator.cpp  BSplineInterpolator.h  CMakeLists.txt
planning/: CMakeLists.txt  dualArmRRT.cpp  interpolatedPoints.csv  pathPoints.csv  pathshow.py
robotModel/: robot_model.cpp  robot_model.h
